# dafny

./: -__module  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitpod.dockerfile  .gitpod.yml  .hgignore  .pre-commit-config.yaml  .travis.yml  4394.bpl  4394__module.bpl  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAFNY.ORG.txt  DEVELOPMENT_GUIDE.md  Dafny.sln  DafnyStandardLibraries-rs-working.doo  Directory.Build.props  Dockerfile  FileIOInternalExterns_Impl.rs  GOAL.md  INSTALL  INSTALL.md  Jennisys.sln  LICENSE  LICENSE.txt  Makefile  NOTICES.txt  PR_DESCRIPTION.md  README.md  RELEASE.md  RELEASE.txt  RELEASE_NOTES.md  SECURITY.md  batch_update_tests.sh  bisect.txt  boogie  buildspec.yml  (+64 more)
Source/DafnyRuntime/DafnyRuntimePython/: .gitignore  BUILDING.md  FileIO.dfy  Makefile  System_.py  _dafny.py  pyproject.toml
Source/DafnyRuntime/DafnyRuntimePython/System_/: __init__.py
Source/DafnyRuntime/DafnyRuntimePython/_dafny/: __init__.py
Source/DafnyRuntime/DafnyRuntimePython/output/: Std.py  Std_Arithmetic.py  Std_Arithmetic_DivInternals.py  Std_Arithmetic_DivInternalsNonlinear.py  Std_Arithmetic_DivMod.py  Std_Arithmetic_GeneralInternals.py  Std_Arithmetic_Logarithm.py  Std_Arithmetic_ModInternals.py  Std_Arithmetic_ModInternalsNonlinear.py  Std_Arithmetic_Mul.py  Std_Arithmetic_MulInternals.py  Std_Arithmetic_MulInternalsNonlinear.py  Std_Arithmetic_Power.py  Std_Arithmetic_Power2.py  Std_Base64.py  Std_BoundedInts.py  Std_Collections.py  Std_Collections_Array.py  Std_Collections_Imap.py  Std_Collections_Iset.py  Std_Collections_Map.py  Std_Collections_Seq.py  Std_Collections_Set.py  Std_Concurrent.py  Std_DynamicArray.py  Std_FileIO.py  Std_Functions.py  Std_JSON.py  Std_JSON_API.py  Std_JSON_ByteStrConversion.py  Std_JSON_ConcreteSyntax.py  Std_JSON_ConcreteSyntax_Spec.py  Std_JSON_ConcreteSyntax_SpecProperties.py  Std_JSON_Deserializer.py  Std_JSON_Deserializer_Uint16StrConversion.py  Std_JSON_Errors.py  Std_JSON_Grammar.py  Std_JSON_Serializer.py  Std_JSON_Spec.py  Std_JSON_Utils.py  (+36 more)
Source/DafnyRuntime/DafnyRuntimePython/src/System_/: __init__.py
Source/DafnyRuntime/DafnyRuntimePython/src/_dafny/: __init__.py
Source/DafnyRuntime/DafnyRuntimeRust/: Cargo.toml  Concurrent.dfy  FileIOInternalExterns.dfy  Makefile  nightly_crimes.LICENSE
Source/DafnyRuntime/DafnyRuntimeRust/nightly_crimes/: Cargo.toml  README.md
Source/DafnyRuntime/DafnyRuntimeRust/nightly_crimes/src/: lib.rs
Source/DafnyRuntime/DafnyRuntimeRust/nightly_crimes/yolo_rustc_bootstrap/: Cargo.toml
Source/DafnyRuntime/DafnyRuntimeRust/src/: big_int.rs  lib.rs  systemmodule.rs
docs/: CNAME  (+24 more)
(+13235 files in other folders)
