[project]
name = "DafnyRuntimePython"
version = "4.9.2"
authors = [
  { name = "The Dafny core team", email = "core-team@dafny.org" },
]
description = "Dafny runtime for Python"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dafny-lang/dafny"
Issues = "https://github.com/dafny-lang/dafny/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["_dafny", "System_"]
