[package]
name = "dafny_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.21.1"
num = { version = "0.4" }
itertools = "0.14.0"

[features]
# Use `dafny translate rs --rust-sync --include-runtime file.dfy`
# to compile to code where values can be sent safely through threads
# This will include the runtime with the sync feature

# Use --no-default-features or default-features = false
# to make DafnyInt use i128 instead of num::BigInt
sync = []
bigint = []
default = ["bigint"]
