[package]
name = "nightly-crimes"
description = "Modified version for nightly-crimes that avoids println."
version = "1.0.2"
edition = "2018"
license = "BSD-2-Clause"
repository = "https://github.com/m-ou-se/nightly-crimes"

[dependencies]
yolo-rustc-bootstrap = { version = "1.0.2", path = "yolo_rustc_bootstrap" }

[workspace]
